feat: полная перезапись на Java + JS
- Backend: Java 17 + встроенный HTTP-сервер (без внешних зависимостей)
- Frontend: HTML5/CSS/JS с радио-плеером на <audio>
- Воспроизведение AAC/AAC+/MP3 как в браузере, без mpv
- Удалены модули: Темы, Цвета экрана
- Оставлены: Радио, О программе
- AppImage с встроенным JRE (jlink), ~31 МБ

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>